103 fix jump to content offset (#648)
* Changed header + subnav to be fixed, added spacer


* Add top margin to error page to prevent 'Oops' from being hidden under the header

--- a/ui/src/Application/ErrorPageTemplate.scss
+++ b/ui/src/Application/ErrorPageTemplate.scss
@@ -23,6 +23,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  margin-top: 40px;
 }
 
 .oopsText {
