--- a/ui/src/Application/PeopleMover.scss
+++ b/ui/src/Application/PeopleMover.scss
@@ -194,3 +194,8 @@ button.addPersonButton {
     transform: translate(0, -70%);
   }
 }
+
+.headerSpacer {
+  height: 108px;
+  width: 100%;
+}
